fix dark mode

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -69,6 +69,8 @@ a:not(:last-child) {
 }
 
 @media (prefers-color-scheme: dark) {
-  background: black;
-  color: white;
+  :root {
+    background: black;
+    color: white;
+  }
 }
